[package]
edition = "2021"
name = "tookey-io_candid-parser"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
anyhow = "1.0.75"
napi = { version = "2.12.2", default-features = false, features = ["napi4", "anyhow", "serde-json"] }
napi-derive = "2.12.2"
candid = { version = "0.9.7", default-features = false, features = ["parser"] }
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
serde_json = "1.0.68"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
